# midi

./: .travis.yml  CMakeLists.txt  README.md
SpacyMusic/: CMakeLists.txt
SpacyMusic/Util/: UniqueId.h
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Util/: TestUniqueId.cpp
cmake/: SpacyMusicConfig.cmake  SpacyMusicConfigVersion.cmake.in
